--- a/pom.xml
+++ b/pom.xml
@@ -29,21 +29,10 @@
     </developers>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/mkpaz/atlantafx.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/mkpaz/devtoolsfx.git</developerConnection>
         <connection>${project.scm.developerConnection}</connection>
         <url>${project.url}</url>
     </scm>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
 
     <modules>
         <module>connector</module>
@@ -112,11 +101,6 @@
                         <release>${javaVersion}</release>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -172,6 +156,16 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.8.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                            <excludeArtifacts>devtoolsfx-demo</excludeArtifacts>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
